Maurice fix + covering our asses

--- a/src/styles/animista.scss
+++ b/src/styles/animista.scss
@@ -9,6 +9,11 @@
 	        animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
+.rotate-center {
+	-webkit-animation: rotate-center 0.6s ease-in-out both;
+	        animation: rotate-center 0.6s ease-in-out both;
+}
+
 /* ----------------------------------------------
  * Generated by Animista on 2020-7-4 0:33:56
  * Licensed under FreeBSD License.
@@ -16,6 +21,33 @@
  * w: http://animista.net, t: @cssanimista
  * ---------------------------------------------- */
  
+
+/**
+ * ----------------------------------------
+ * animation rotate-center
+ * ----------------------------------------
+ */
+@-webkit-keyframes rotate-center {
+        0% {
+          -webkit-transform: rotate(0);
+                  transform: rotate(0);
+        }
+        100% {
+          -webkit-transform: rotate(360deg);
+                  transform: rotate(360deg);
+        }
+      }
+      @keyframes rotate-center {
+        0% {
+          -webkit-transform: rotate(0);
+                  transform: rotate(0);
+        }
+        100% {
+          -webkit-transform: rotate(360deg);
+                  transform: rotate(360deg);
+        }
+      }
+      
 /**
  * ----------------------------------------
  * animation slide-top
